# tempo-detection-eval

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
saint/: BpmEstimator.cpp  CMakeLists.txt  WavFileReader.h  main.cpp
saint/estimators/: MiniBpmEstimator.cpp
saint/musehub-file-decoder/: CMakeLists.txt  main.cpp
saint/tempo-detection-eval/: BpmEstimator.h  CMakeLists.txt  main.cpp
saint/tempo-detection-eval/estimators/: MiniBpmEstimator.cpp  MiniBpmEstimator.h
saint/wavfile/: CMakeLists.txt  ProgressBar.cpp  ProgressBar.h  StereoWavFileWriter.cpp  StereoWavFileWriter.h  WavFileReader.cpp  WavFileReader.h
src/: CMakeLists.txt  WavFileReader.cpp  WavFileReader.h  main.cpp
